apps/system/base/metrics-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: metrics-server
  labels:
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/part-of: kube-system
spec:
  selector:
    k8s-app: metrics-server
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
  type: ClusterIP
  sessionAffinity: None
